# playing-with-shifts

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  a.out  bash commands  config  gen.sh  main  makefile  subsh.sh  test.sh  testg2l.sh  testg2wt  testg2wt.sh  testl2ss.sh  testwt2ss.sh  universe_script.cpp
data/: graph
data/g2wt/in/: graph1
data/wt2ss/in/: input_wt2  input_wt5  wt3  wt6  wt9
digraphs/n4_e5/: 0  0_0  0_1  0_10  0_100  0_101  0_102  0_103  0_104  0_105  0_106  0_107  0_109  0_110  0_111  0_112  0_113  0_114  0_115  0_117  0_118  0_119  0_120  0_121  0_122  0_123  0_124  0_125  0_126  0_127  0_128  0_129  0_13  0_130  0_131  0_132  0_133  0_135  0_137  0_138  (+1015 more)
digraphs/n4_e5/0_interesting/: 0_108  0_11  0_116  0_12  0_134  0_136  0_29  0_31  0_35  0_37  0_63  0_65  0_72  0_83  0_89  0_9  0_90  0_91  0_interesting_result_15
digraphs/n4_e5/3_interesting/: 3_142  3_15  3_161  3_188  3_199  3_208  3_211  3_27  3_57  3_87  3_92  3_95  3_interesting_result_10  3_interesting_result_15
digraphs/n4_e5/4_interesting/: 4_101  4_107  4_108  4_110  4_111  4_116  4_124  4_133  4_15  4_172  4_188  4_27  4_33  4_36  4_39  4_43  4_62  4_63  4_8  4_84  4_89  4_9  4_90  4_96  4_interesting_result_10  4_interesting_result_15  (+1 more)
digraphs/n6_e7/: 0  0_0  0_1  0_10  0_100  0_1000  0_1001  0_1002  0_1003  0_1004  0_1005  0_1006  0_1007  0_1008  0_1009  0_101  0_1010  0_1011  0_1012  0_1013  0_1014  0_1015  0_1016  0_1017  0_1018  0_1019  0_102  0_1020  0_1021  0_1022  0_1023  0_1024  0_1025  0_1026  0_1027  0_1028  0_1029  0_103  0_1030  0_1031  (+2156 more)
interest/: 10  11  2  6  mapping  result_10  result_15  result_20
profile/: results
src/: alphabet.h  app.cpp  app.h  appconfig.cpp  appconfig.h  appcontext.cpp  appcontext.h  applicationarguments.cpp  applicationarguments.h  argsparser.cpp  argsparser.h  buildconsole.cpp  buildconsole.h  bundle.cpp  bundle.h  comb.h  console.cpp  console.h  consolefactory.cpp  consolefactory.h  converter.cpp  converter.h  diffserver.cpp  diffserver.h  filelanguageservice.cpp  filelanguageservice.h  game.cpp  game.h  gamefactory.cpp  gamefactory.h  gameroom.cpp  gameroom.h  gameroomservice.cpp  gameroomservice.h  gameserver.cpp  gameserver.h  gameserverservice.cpp  gameserverservice.h  gamesession.cpp  gamesession.h  (+108 more)
test/: graph_3  input0  input_wt1  input_wt4  input_wt7  output0  output_wt11  output_wt41  output_wt61
uml/: class model.uxf  component model.uxf  domain model.uxf  interface.uxf  parser domain model.uxf
(+14 files in other folders)
