cmake_minimum_required(VERSION 3.6)
project(shifts)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/app.cpp
        src/app.h
        src/appcontext.cpp
        src/appcontext.h
        src/argsparser.cpp
        src/argsparser.h
        src/converter.cpp
        src/converter.h
        src/filelanguageservice.cpp
        src/filelanguageservice.h
        src/game.cpp
        src/game.h
        src/gamefactory.cpp
        src/gamefactory.h
        src/gameroom.cpp
        src/gameroom.h
        src/gameroomservice.cpp
        src/gameroomservice.h
        src/gameserver.cpp
        src/gameserver.h
        src/gameserverservice.cpp
        src/gameserverservice.h
        src/gamesession.cpp
        src/gamesession.h
        src/gamesessionservice.cpp
        src/gamesessionservice.h
        src/gedge.h
        src/gnode.cpp
        src/gnode.h
        src/graph.cpp
        src/graph.h
        src/graph2lang.cpp
        src/graph2lang.h
        src/graphgen.cpp
        src/graphgen.h
        src/graphlanguageservice.cpp
        src/graphlanguageservice.h
        src/greader.cpp
        src/greader.h
        src/judge.cpp
        src/judge.h
        src/langreader.cpp
        src/langreader.h
        src/language.cpp
        src/language.h
        src/languageservice.cpp
        src/languageservice.h
        src/maxbcntplayer.cpp
        src/maxbcntplayer.h
        src/no3inrow.cpp
        src/no3inrow.h
        src/player.cpp
        src/player.h
        src/playerfactory.cpp
        src/playerfactory.h
        src/playshift.cpp
        src/printer.cpp
        src/printer.h
        src/random.cpp
        src/random.h
        src/rulelanguageservice.cpp
        src/rulelanguageservice.h
        src/strategy.cpp
        src/strategy.h
        src/successplayer.cpp
        src/successplayer.h
        src/tblgame.h
        src/tblgame1.cpp
        src/tblgame1.h
        src/tblgame2.cpp
        src/tblgame2.h
        src/tnode.cpp
        src/tnode.h
        src/trgame.cpp
        src/trgame.h
        src/wordstructure.h
        src/wordtable.cpp
        src/wordtable.h
        src/wordtree.cpp
        src/wordtree.h
        universe_script.cpp src/reallanguageservice.cpp src/reallanguageservice.h src/appconfig.cpp src/appconfig.h src/graphgeneratorservice.cpp src/graphgeneratorservice.h)

add_executable(shifts ${SOURCE_FILES})